<resources>
    <string name="app_name">CatatanKu</string>
    <string name="homepage_title">CatatanKu</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up_link"><u>Sign Up</u></string>
    <string name="sign_up_title">Sign Up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>

    <string name="title">Judul</string>
    <string name="description">Isi catatan…</string>
    <string name="submit">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>

    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="edit">Edit</string>
    <string name="my_profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="data_blank_text">Tidak ada catatan</string>
</resources>