<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_email_signup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_700"
            android:textColorHint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/edt_username_signup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/username"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="username"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_700"
            android:textColorHint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="@+id/edt_email_signup"
            app:layout_constraintStart_toStartOf="@+id/edt_email_signup"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_signup" />

        <EditText
            android:id="@+id/edt_password_signup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:layout_constraintEnd_toEndOf="@+id/edt_username_signup"
            app:layout_constraintStart_toStartOf="@+id/edt_username_signup"
            app:layout_constraintTop_toBottomOf="@+id/edt_username_signup" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/red"
            android:text="@string/sign_up"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_password_signup"
            app:layout_constraintStart_toStartOf="@+id/edt_password_signup"
            app:layout_constraintTop_toBottomOf="@id/edt_password_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>